<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".message.MessageFragment"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                style="@style/message_every"
                android:background="@drawable/border_bottom_gray_1dp">
                <LinearLayout
                    style="@style/message_every_text">
                    <TextView
                        style="@style/message_title"
                        android:text="@string/gusufanhuatu_jieguo"/>
                    <LinearLayout
                        style="@style/message_bottom_text">
                        <TextView
                            style="@style/message_zhongguoyouzheng"/>
                        <TextView
                            style="@style/message_time"
                            android:text="2022-05-20"/>
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    style="@style/message_image"
                    android:src="@drawable/gusufanhuatu"/>
            </LinearLayout>
            <LinearLayout
                style="@style/message_every"
                android:background="@drawable/border_bottom_gray_1dp">
                <LinearLayout
                    style="@style/message_every_text">
                    <TextView
                        style="@style/message_title"
                        android:text="@string/yufuyuanqicheng"/>
                    <LinearLayout
                        style="@style/message_bottom_text">
                        <TextView
                            style="@style/message_zhongguoyouzheng"/>
                        <TextView
                            style="@style/message_time"
                            android:text="2022-05-20"/>
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    style="@style/message_image"
                    android:src="@drawable/qicheng"/>
            </LinearLayout>
            <LinearLayout
                style="@style/message_every"
                android:background="@drawable/border_bottom_gray_1dp">
                <LinearLayout
                    style="@style/message_every_text">
                    <TextView
                        style="@style/message_title"
                        android:text="5月上新日【浪漫邮约】"/>
                    <LinearLayout
                        style="@style/message_bottom_text">
                        <TextView
                            style="@style/message_zhongguoyouzheng"/>
                        <TextView
                            style="@style/message_time"
                            android:text="2022-05-20"/>
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    style="@style/message_image"
                    android:src="@drawable/langmanyouyue"/>
            </LinearLayout>
            <LinearLayout
                style="@style/message_every"
                android:background="@drawable/border_bottom_gray_1dp">
                <LinearLayout
                    style="@style/message_every_text">
                    <TextView
                        style="@style/message_title"
                        android:text="@string/mingzhu_homgloumeng"/>
                    <LinearLayout
                        style="@style/message_bottom_text">
                        <TextView
                            style="@style/message_zhongguoyouzheng"/>
                        <TextView
                            style="@style/message_time"
                            android:text="2022-05-18"/>
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    style="@style/message_image"
                    android:src="@drawable/mingzhu_hongloumeng"/>
            </LinearLayout>
            <LinearLayout
                style="@style/message_every"
                android:background="@drawable/border_bottom_gray_1dp">
                <LinearLayout
                    style="@style/message_every_text">
                    <TextView
                        style="@style/message_title"
                        android:text="@string/liuyueshangxunfaxing"/>
                    <LinearLayout
                        style="@style/message_bottom_text">
                        <TextView
                            style="@style/message_zhongguoyouzheng"/>
                        <TextView
                            style="@style/message_time"
                            android:text="2022-05-18"/>
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    style="@style/message_image"
                    android:src="@drawable/liuyueshangxunfaxing"/>
            </LinearLayout>
            <LinearLayout
                style="@style/message_every"
                android:background="@drawable/border_bottom_gray_1dp">
                <LinearLayout
                    style="@style/message_every_text">
                    <TextView
                        style="@style/message_title"
                        android:text="疫情期间缓发路向重点提示"/>
                    <LinearLayout
                        style="@style/message_bottom_text">
                        <TextView
                            style="@style/message_zhongguoyouzheng"/>
                        <TextView
                            style="@style/message_time"
                            android:text="2022-05-17"/>
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    style="@style/message_image"
                    android:src="@drawable/zhongdiantishi"/>
            </LinearLayout>
            <LinearLayout
                style="@style/message_every"
                android:background="@drawable/border_bottom_gray_1dp">
                <LinearLayout
                    style="@style/message_every_text">
                    <TextView
                        style="@style/message_title"
                        android:text="@string/gusufanhuatu_jieguo"/>
                    <LinearLayout
                        style="@style/message_bottom_text">
                        <TextView
                            style="@style/message_zhongguoyouzheng"/>
                        <TextView
                            style="@style/message_time"
                            android:text="2022-05-20"/>
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    style="@style/message_image"
                    android:src="@drawable/gusufanhuatu"/>
            </LinearLayout>
            <LinearLayout
                style="@style/message_every"
                android:background="@drawable/border_bottom_gray_1dp">
                <LinearLayout
                    style="@style/message_every_text">
                    <TextView
                        style="@style/message_title"
                        android:text="誉福园纽荷尔脐橙"/>
                    <LinearLayout
                        style="@style/message_bottom_text">
                        <TextView
                            style="@style/message_zhongguoyouzheng"/>
                        <TextView
                            style="@style/message_time"
                            android:text="2022-05-20"/>
                    </LinearLayout>
                </LinearLayout>
                <ImageView
                    style="@style/message_image"
                    android:src="@drawable/gusufanhuatu"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>