<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:src="@drawable/img_home_page_slideshow"
                android:background="@drawable/shape_10dp_corners"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@drawable/shape_10dp_white_corners">

                <LinearLayout
                    style="@style/market_menubar_img_and_txt">

                    <ImageButton
                        style="@style/market_menubar_img"
                        android:src="@mipmap/ic_launcher"/>

                    <TextView
                        style="@style/market_menubar_txt"
                        android:text="@string/youpinyoupiao"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/market_menubar_img_and_txt">

                    <ImageButton
                        style="@style/market_menubar_img"
                        android:src="@mipmap/ic_launcher"/>

                    <TextView
                        style="@style/market_menubar_txt"
                        android:text="@string/youpinyoupiao"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/market_menubar_img_and_txt">

                    <ImageButton
                        style="@style/market_menubar_img"
                        android:src="@mipmap/ic_launcher"/>

                    <TextView
                        style="@style/market_menubar_txt"
                        android:text="@string/youpinyoupiao"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/market_menubar_img_and_txt">

                    <ImageButton
                        style="@style/market_menubar_img"
                        android:src="@mipmap/ic_launcher"/>

                    <TextView
                        style="@style/market_menubar_txt"
                        android:text="@string/youpinyoupiao"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/market_menubar_img_and_txt">

                    <ImageButton
                        style="@style/market_menubar_img"
                        android:src="@mipmap/ic_launcher"/>

                    <TextView
                        style="@style/market_menubar_txt"
                        android:text="@string/youpinyoupiao"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:background="@drawable/shape_10dp_white_corners"
                android:orientation="horizontal">

                <LinearLayout
                    style="@style/half_layout"
                    android:background="@drawable/border_right_gray_1dp">

                    <TextView
                        style="@style/market_mini_txt"
                        android:text="@string/youhaohuo"
                        android:textColor="@color/ems_green"/>

                    <LinearLayout
                        style="@style/market_mini_img_layout">

                        <ImageView
                            style="@style/market_mini_img"
                            android:src="@drawable/img_commodity_recommend_duzhe"/>

                        <ImageView
                            style="@style/market_mini_img"
                            android:src="@drawable/img_commodity_recommend_duzhe"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    style="@style/half_layout">

                    <TextView
                        style="@style/market_mini_txt"
                        android:text="@string/rexiaoduwu"
                        android:textColor="@color/orange"/>

                    <LinearLayout
                        style="@style/market_mini_img_layout">

                        <ImageView
                            style="@style/market_mini_img"
                            android:src="@drawable/img_commodity_recommend_duzhe"/>

                        <ImageView
                            style="@style/market_mini_img"
                            android:src="@drawable/img_commodity_recommend_duzhe"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    style="@style/titleCommodityRecommend"
                    android:layout_marginEnd="260dp"
                    android:src="@drawable/title_youpin_youpiao"/>
                <LinearLayout
                    style="@style/market_recommend_big">
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    style="@style/titleCommodityRecommend"
                    android:layout_marginEnd="260dp"
                    android:src="@drawable/title_youpin_youpiao"/>
                <LinearLayout
                    style="@style/market_recommend_big">
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    style="@style/titleCommodityRecommend"
                    android:layout_marginEnd="260dp"
                    android:src="@drawable/title_youpin_youpiao"/>
                <LinearLayout
                    style="@style/market_recommend_big">
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    style="@style/titleCommodityRecommend"
                    android:layout_marginEnd="260dp"
                    android:src="@drawable/title_youpin_youpiao"/>
                <LinearLayout
                    style="@style/market_recommend_big">
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    style="@style/titleCommodityRecommend"
                    android:layout_marginEnd="260dp"
                    android:src="@drawable/title_youpin_youpiao"/>
                <LinearLayout
                    style="@style/market_recommend_big">
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                    <LinearLayout
                        style="@style/market_recommend_every"
                        android:background="@drawable/shape_10dp_white_corners">
                        <ImageView
                            style="@style/market_recommend_img"
                            android:src="@drawable/img_commodity_recommend_lajiao"/>
                        <TextView
                            style="@style/market_recommend_txt"
                            android:text="@string/lajiao"/>
                        <TextView
                            style="@style/market_recommend_price"
                            android:text="￥78"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daodile"
                android:textSize="10sp"
                android:textColor="#d6d5db"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>